--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 <body>
     <div class="page">
         <header class="header">
-                <a href="index.html" class="logo logo_place_header"><img src="./blocks/header/images/logo.svg" alt="лого"></a>
+                <a href="index.html" class="logo logo_place_header"><img src="./images/logo.svg" alt="лого"></a>
                 <h1 class="header__title">Научиться учиться</h1>
                 <p class="header__subtitle">Какие современные и эффективные подходы к
                      обучению вы можете использовать в своей жизни?
                      <a href="#" class="header__link">Узнать &#8594; </a></p>
-                 <img src="./blocks/header/images/two_again.png" alt="опять двойка" class="header__main-illustration">
-                <div class="rotation">
+                 <img src="./images/two_again.png" alt="опять двойка" class="header__main-illustration">
                  <div class="header__square-pic"></div>
-                </div>
         </header>
         <main class="content">
             <section class="description">
@@ -43,31 +41,31 @@
               <p class="section-subtitle">Пять практик от Барбары Оакли</p>
               <div class="cards">
                 <div class="cards__item">
-                  <img src="./blocks/technics/images/attention.png" alt="внимание" class="cards__image">
+                  <img src="./images/attention.png" alt="внимание" class="cards__image">
                   <h4 class="cards__title">Два вида внимания</h4>
                   <p class="cards__description">Глубокие знания возникают,
                     если чередовать сфокусированное и рассеянное мышление.</p>
                 </div>
                 <div class="cards__item">
-                  <img src="./blocks/technics/images/recall.png" alt="память" class="cards__image">
+                  <img src="./images/recall.png" alt="память" class="cards__image">
                   <h4 class="cards__title">Recall</h4>
                   <p class="cards__description">Вспоминайте изученное — это позволит соединить
                     разрозненные порции памяти.</p>
                 </div>
                 <div class="cards__item">
-                  <img src="./blocks/technics/images/interliving.png" alt="интерливинг" class="cards__image">
+                  <img src="./images/interliving.png" alt="интерливинг" class="cards__image">
                   <h4 class="cards__title">Интерливинг</h4>
                   <p class="cards__description">Изучайте несколько навыков одновременно,
                     они обогащают друг друга.</p>
                 </div>
                 <div class="cards__item">
-                  <img src="./blocks/technics/images/question.png" alt="вопросы" class="cards__image">
+                  <img src="./images/question.png" alt="вопросы" class="cards__image">
                   <h4 class="cards__title">Вопросы</h4>
                   <p class="cards__description">Слушая преподавателя, придумывайте хороший
                     вопрос, который вас действительно волнует.</p>
                 </div>
                 <div class="cards__item">
-                  <img src="./blocks/technics/images/competence.png" alt="компетенция" class="cards__image">
+                  <img src="./images/competence.png" alt="компетенция" class="cards__image">
                   <h4 class="cards__title">Иллюзия компетентности</h4>
                   <p class="cards__description">Повторите про себя, запишите, расскажите другу:
                     вам только кажется, что вы владеете новой темой.
@@ -103,7 +101,7 @@
             </div>
             </section>
             <section class="feinman">
-              <h1 class="feinman__title">Метод Фейнмана</h1>
+              <h2 class="feinman__title">Метод Фейнмана</h2>
               <p class="feinman__subtitle">Выучить и не забыть.</p>
               <a href="#" class="feinman__link">Подробнее &#8594;</a>
             </section>
@@ -162,7 +160,7 @@
                 <p class="khan__quote-author">Джордж Лукас</p>
                 <p class="knan__quote-author-subline">Кинорежиссер, продюсер</p>
                 <div class="khan__book-container">
-                  <img src="./blocks/khan/images/book.jpg" alt="книга Хана" class="khan__book-pic">
+                  <img src="./images/book.jpg" alt="книга Хана" class="khan__book-pic">
                   <a href="" class="khan__buy-link">Купить книгу &#8594;</a>
                 </div>
               </div>
@@ -220,18 +218,16 @@
                         и скорости.</p>
                 </div>
                 </div>
-                <div class="rotation">
-                <img class="kaufman__triangle" src="./blocks/kaufman/images/triangle.svg" alt="треугольник">
-                </div>
+                <img class="kaufman__triangle" src="./images/triangle.svg" alt="треугольник">
             </section>
             <section class="resources">
               <h2 class="section-title">Полезные ресурсы</h2>
               <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
               <ul class="resources__logo-zone">
-                <li><a href="https://arzamas.academy/"><img class="resources__logo" src="./blocks/resources/images/arzamas.svg" alt="арзамас"></a></li>
-              <li><a href="https://nplus1.ru/"><img class="resources__logo" src="./blocks/resources/images/n1.svg" alt="н1"></a></li>
-            <li><a href="https://strelka.com/"><img class="resources__logo" src="./blocks/resources/images/strelka.svg" alt="стрелка"></a></li>
-          <li><a href="https://polka.academy/"><img class="resources__logo" src="./blocks/resources/images/polka.svg" alt="полка"></a></li>
+                <li><a href="https://arzamas.academy/"><img class="resources__logo" src="./images/arzamas.svg" alt="арзамас"></a></li>
+              <li><a href="https://nplus1.ru/"><img class="resources__logo" src="./images/n1.svg" alt="н1"></a></li>
+            <li><a href="https://strelka.com/"><img class="resources__logo" src="./images/strelka.svg" alt="стрелка"></a></li>
+          <li><a href="https://polka.academy/"><img class="resources__logo" src="./images/polka.svg" alt="полка"></a></li>
               </ul>
             </section>
         </main>
@@ -239,7 +235,7 @@
             <div class="footer__columns">
                 <div class="footer__column footer__column_content_copyright">
                     <a href="index.html" class="logo logo_place_footer">
-                        <img src="./blocks/footer/images/logo_white.svg" alt="лого"></a>
+                        <img src="./images/logo_white.svg" alt="лого"></a>
                     <p class="footer__author">&copy; 2020. Yulia Fokina</p>
                 </div>
                 <nav class="footer__column footer__column_content_info">
@@ -254,13 +250,13 @@
                     <h4 class="footer__column-heading">Соцсети</h4>
                     <ul class="footer__column-links">
                         <li><a class="footer__column-link" href="https://www.facebook.com/yulia.fokina.735?ref=bookmarks">
-                            <img class="footer__social-icon" src="./blocks/footer/images/facebook_white.svg" alt="фейсбук">
+                            <img class="footer__social-icon" src="./images/facebook_white.svg" alt="фейсбук">
                             Facebook</a></li>
                         <li><a class="footer__column-link" href="https://vk.com/">
-                            <img class="footer__social-icon" src="./blocks/footer/images/vk_white.svg" alt="вконтакте">
+                            <img class="footer__social-icon" src="./images/vk_white.svg" alt="вконтакте">
                             ВКонтакте</a></li>
                         <li><a class="footer__column-link" href="https://www.instagram.com/iuliiafokina908/">
-                            <img class="footer__social-icon" src="./blocks/footer/images/instagram_white.svg" alt="инстаграм">
+                            <img class="footer__social-icon" src="./images/instagram_white.svg" alt="инстаграм">
                             Instagram</a></li>
                     </ul>
                 </nav>
